--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
       
        stage('Git Checkout') {
             steps {
-               git branch: 'main', url: 'https://github.ibm.com/deshmuk1/demoiac.git'
+               git branch: 'main', url: 'https://github.com/kuleshdeshmukh/demoiac'
             }
         }
         
