--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
             steps {
               sh """
                         echo "Generating the plan"
-                        terraform plan -auto-approve -var "region=$region" -var "zone_id=$zone_id" -var "vpc_name=$vpc_name" -var "subnet=$subnet" -var "image_id=$image_id" -var "vmname=$vmname" -var "vmsize=$vmsize" -var "keyname=$keyname" -var "access_key=$access_key" -var "secret_key=$secret_key"
+                        terraform plan -var "region=$region" -var "zone_id=$zone_id" -var "vpc_name=$vpc_name" -var "subnet=$subnet" -var "image_id=$image_id" -var "vmname=$vmname" -var "vmsize=$vmsize" -var "keyname=$keyname" -var "access_key=$access_key" -var "secret_key=$secret_key"
                         """
             }
         }
