--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
             steps {
               sh """
                         echo "Initializing the workspace"
-                        terraform init -backend-config="access_key=$access_key" -backend-config="secret_key=$secret_key"
+                        terraform init -backend-config="access_key=${access_key}" -backend-config="secret_key=${secret_key}"
                         """
               
             }
@@ -36,7 +36,7 @@ pipeline {
             steps {
               sh """
                         echo "Generating the plan"
-                        terraform plan -var "region=$region" -var "zone_id=$zone_id" -var "vpc_name=$vpc_name" -var "subnet=$subnet" -var "image_id=$image_id" -var "vmname=$vmname" -var "vmsize=$vmsize" -var "keyname=$keyname" -var "access_key=$access_key" -var "secret_key=$secret_key"
+                        terraform plan -var "region=$region" -var "zone_id=$zone_id" -var "vpc_name=$vpc_name" -var "subnet=$subnet" -var "image_id=$image_id" -var "vmname=$vmname" -var "vmsize=$vmsize" -var "keyname=$keyname" -var "access_key=${access_key}" -var "secret_key=${secret_key}"
                         """
             }
         }
