--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,8 +1,16 @@
 pipeline {
     agent any
+    
+    environment {
+        ALICLOUD_ACCESS_KEY     = credentials('ALICLOUD_ACCESS_KEY')
+        ALICLOUD_SECRET_KEY = credentials('ALICLOUD_SECRET_KEY')
+    }
+    
     tools {
     terraform 'terraform'
     }
+    
+    
     
 
     stages {
@@ -18,7 +26,8 @@ pipeline {
             steps {
               sh """
                         echo "Initializing the workspace"
-                        terraform init -backend-config="access_key=${access_key}" -backend-config="secret_key=${secret_key}"
+                        sh 'terraform workspace select ${environment} || terraform workspace new ${environment}'
+                        terraform init
                         """
               
             }
